[code] start PDI, steps break down

--- a/notebook-example/GMM_MCMC.ipynb
+++ b/notebook-example/GMM_MCMC.ipynb
@@ -859,12 +859,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#qpi.eval()"
+    "### Posterior Dispersion Index (PDI)\n",
+    "\n",
+    "Reference: http://proceedings.mlr.press/v70/kucukelbir17a/kucukelbir17a.pdf\n",
+    "\n",
+    "Citation: Kucukelbir, Alp, Yixin, Wang and Blei, David M. Evaluating Bayesian Models with Posterior Dispersion Indices, In $\\textit{Proceedings\n",
+    "of the 34th International Conference on Machine Learning,\n",
+    "volume 70 of Proceedings of Machine Learning Research}$,\n",
+    "pages 1925–1934, International Convention Centre, Sydney,\n",
+    "Australia, 06–11 Aug 2017.\n",
+    "\n",
+    "Goal: \n",
+    "\n",
+    "Evalute the quantity $\\frac{V_{\\theta|x} [p(x_n |\\theta)]}{E_{\\theta|x} [p(x_n |\\theta)]}$ for each point $x_n$\n",
+    "\n",
+    "Steps:\n",
+    "1. We look at a single data point $x_n$ first.\n",
+    "2. Compute the posterior distribution $p(\\theta | x)$\n",
+    "3. Sample ${\\theta_1, ..., \\theta_m}$ where $\\theta_i \\sim p(\\theta|x)$\n",
+    "4. For each $\\theta_i$, calculate the likelihood $lik_{ni} = p(x_n | \\theta_i)$. Collect $Lik_n = \\{lik_{n1}, ..., lik_{nm}\\}$\n",
+    "5. Calculate $Var(Lik_n)$ and $Exp(Lik_n)$\n",
+    "6. Repeat the computation for all data points.\n",
+    "\n",
+    "During Implementation, we make use of the `log_liks` in the computation graph before, but instead of reducing both 2nd and 4th dimension, we now only reduce 4th dimension because we want to keep these samples. "
    ]
   },
   {
@@ -873,7 +893,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#new_img.eval()"
+    "# 1. pick a point\n"
    ]
   },
   {
