[code] add text explanation start pdi

--- a/notebook-example/GMM_MCMC.ipynb
+++ b/notebook-example/GMM_MCMC.ipynb
@@ -720,52 +720,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 94, 131, 173],\n",
-       "       [ 93, 130, 172],\n",
-       "       [ 93, 130, 172],\n",
-       "       ...,\n",
-       "       [ 57,  51,  29],\n",
-       "       [ 58,  53,  34],\n",
-       "       [ 63,  62,  41]])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor 'Exp:0' shape=(154401, 7) dtype=float32>"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf.exp(log_liks)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -862,7 +816,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Posterior Dispersion Index (PDI)\n",
+    "### Posterior Dispersion Index (PDI) and WAPDI\n",
     "\n",
     "Reference: http://proceedings.mlr.press/v70/kucukelbir17a/kucukelbir17a.pdf\n",
     "\n",
@@ -876,10 +830,12 @@
     "\n",
     "Evalute the quantity $\\frac{V_{\\theta|x} [p(x_n |\\theta)]}{E_{\\theta|x} [p(x_n |\\theta)]}$ for each point $x_n$\n",
     "\n",
+    "Alternatively, evaluate the quantity $\\frac{V_{\\theta|x} [logp(x_n |\\theta)]}{E_{\\theta|x} [logp(x_n |\\theta)]}$\n",
+    "\n",
     "Steps:\n",
     "1. We look at a single data point $x_n$ first.\n",
     "2. Compute the posterior distribution $p(\\theta | x)$\n",
-    "3. Sample ${\\theta_1, ..., \\theta_m}$ where $\\theta_i \\sim p(\\theta|x)$\n",
+    "3. Sample ${\\theta_1, ..., \\theta_m}$ where $\\theta_i \\sim p(\\theta|x)$  (In this problem, we need to sample $\\pi$)\n",
     "4. For each $\\theta_i$, calculate the likelihood $lik_{ni} = p(x_n | \\theta_i)$. Collect $Lik_n = \\{lik_{n1}, ..., lik_{nm}\\}$\n",
     "5. Calculate $Var(Lik_n)$ and $Exp(Lik_n)$\n",
     "6. Repeat the computation for all data points.\n",
@@ -893,7 +849,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. pick a point\n"
+    "# 1. \n"
    ]
   },
   {
@@ -901,27 +857,11 @@
    "metadata": {},
    "source": [
     "## Next Step\n",
-    "1. Set N_iter = 500\n",
-    "2. Record the log_likelihood = ed.evaluate() across all N_iter\n",
-    "\n",
+    "1. Set N_iter = 100, 200, 300, 400, 500\n",
+    "2. Record the log_likelihood across all N_iter\n",
+    "3. Implement PDI and WAPDI\n",
+    "4. Logging these result [important]\n",
     "3. Change initialization method. See if that would affect result"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Next Step"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "0. evaluate 改进版：见2-d gmm的下方注释\n",
-    "1. posterior predictive distribution\n",
-    "2. initialization\n",
-    "3. Posterior Dispersion Indices - 见gaussian mixture 2收藏夹"
    ]
   },
   {
