[code] calculate metrics on clus-assin matrix

--- a/notebook-example/load_groundtruth_evaluation.ipynb
+++ b/notebook-example/load_groundtruth_evaluation.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# val2 contains the \n",
+    "# val2 contains the boundaries of various segments\n",
     "val2 = l[0,0][1]"
    ]
   },
@@ -169,34 +169,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "val = val.reshape(-1)\n",
-    "rans = np.random.randint(17, size=np.shape(val)).reshape(-1)"
+    "val = val.reshape(-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CLUSTER_ASSN_DIR = '../tmp/log/cluster_assign_matrix/'\n",
+    "img_no = 2092\n",
+    "K = 20\n",
+    "T = 1000\n",
+    "current_time = \"2018-11-23 16:22:42\"\n",
+    "img_file = \"cluster_assign={}_K={}_T={}_Time={}.npy\".format(img_no, K, T, current_time)\n",
+    "rans = np.load(CLUSTER_ASSN_DIR + img_file)\n",
+    "rans = np.reshape(rans, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Homogeneity: 0.001\n",
-      "Completeness: 0.000\n",
-      "V-measure: 0.000\n",
-      "Adjusted Rand Index: -0.000\n",
-      "Adjusted Mutual Information: -0.000\n"
+      "Homogeneity: 0.466\n",
+      "Completeness: 0.647\n",
+      "V-measure: 0.542\n",
+      "Adjusted Rand Index: 0.656\n",
+      "Adjusted Mutual Information: 0.465\n"
      ]
     }
    ],
    "source": [
     "# reference: https://scikit-learn.org/stable/auto_examples/cluster/plot_dbscan.html\n",
-    "\n",
     "print(\"Homogeneity: %0.3f\" % metrics.homogeneity_score(val, rans))\n",
     "print(\"Completeness: %0.3f\" % metrics.completeness_score(val, rans))\n",
     "print(\"V-measure: %0.3f\" % metrics.v_measure_score(val, rans))\n",
@@ -204,6 +218,26 @@
     "      % metrics.adjusted_rand_score(val, rans))\n",
     "print(\"Adjusted Mutual Information: %0.3f\"\n",
     "      % metrics.adjusted_mutual_info_score(val, rans))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(154401,)"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rans.shape"
    ]
   },
   {
