[code] minor update

--- a/notebook-example/GMM_MCMC.ipynb
+++ b/notebook-example/GMM_MCMC.ipynb
@@ -251,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inference.initialize(n_print=50, logdir='log/IMG={}_K={}_T={}'.format(img_no, K, T))\n",
+    "inference.initialize(n_print=200, logdir='log/IMG={}_K={}_T={}'.format(img_no, K, T))\n",
     "sess = ed.get_session()\n",
     "tf.global_variables_initializer().run()\n",
     "t_ph = tf.placeholder(tf.int32, [])\n",
@@ -734,7 +734,6 @@
     "    if t % inference.n_print == 0:\n",
     "        print(\"\\nInferred cluster means:\")\n",
     "        last_mu = sess.run(running_cluster_means, {t_ph: t - 1})\n",
-    "        print(last_mu)\n",
     "inference.finalize()"
    ]
   },
@@ -835,53 +834,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_img = tf.gather(running_cluster_means, tf.argmax(log_liks, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(154401,)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clusters.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0,  0,  0, ...,  0,  0, 14],\n",
-       "       [ 0,  0,  0, ...,  0,  0, 14],\n",
-       "       [ 0,  0,  0, ...,  0,  0, 14],\n",
-       "       ...,\n",
-       "       [12, 12,  9, ...,  9,  9,  9],\n",
-       "       [ 9, 12, 12, ..., 12,  9,  9],\n",
-       "       [12,  9, 12, ..., 12, 12,  9]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clusters.reshape(img.shape[0], img.shape[1])"
+    "#new_img = tf.gather(running_cluster_means, tf.argmax(log_liks, 1))"
    ]
   },
   {
@@ -1106,29 +1059,6 @@
     "6. Repeat the computation for all data points.\n",
     "\n",
     "During Implementation, we make use of the `log_liks` in the computation graph before, but instead of reducing both 2nd and 4th dimension, we now only reduce 4th dimension because we want to keep these samples. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. PDI 1\n",
-    "#pi_samples_tiled_4 = tf.tile(tf.expand_dims(pi_sample, 0), [N, 1,1]) # [500, 100, 7], [N, M, K]\n",
-    "#p_x_given_theta_3 = tf.reduce_sum(tf.multiply(pi_samples_tiled_4, tf.exp(log_liks_3)), axis=2) \n",
-    "#pdi_mean, pdi_variance = tf.nn.moments(p_x_given_theta_3, axes=[1])\n",
-    "#pdi = tf.divide(pdi_variance, pdi_mean)\n",
-    "#pdi_values = sess.run(pdi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pdi_values"
    ]
   },
   {
@@ -1375,10 +1305,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-11-23 16:22:42\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(current_time)"
+   ]
   },
   {
    "cell_type": "markdown",
