adjust project structure

--- a/final-project/final-notebook.ipynb
+++ b/final-project/final-notebook.ipynb
@@ -38,6 +38,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "codebase = '../'\n",
+    "sys.path.append(codebase)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -339,7 +351,7 @@
    "outputs": [],
    "source": [
     "# posterior inference\n",
-    "M=300\n",
+    "M = 300\n",
     "mu_sample, sigmasq_sample, pi_sample = qmu.sample(M), qsigma.sample(M), qpi.sample(M)\n",
     "\n",
     "x_post = Normal(loc=tf.ones([N, 1, 1, 1]) * mu_sample,\n",
@@ -355,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,16 +377,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x12ba3e048>"
+       "<matplotlib.image.AxesImage at 0x136dd4390>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -704,9 +716,7 @@
     "    info_dict_2 = inference_2.update()\n",
     "    inference_2.print_progress(info_dict_2)\n",
     "    t = info_dict_2['t']\n",
-    "    if t % inference_2.n_print == 0:\n",
-    "        print(\"\\nInferred cluster means:\")\n",
-    "        last_mu = sess.run(running_cluster_means_2, {t_ph: t - 1})\n",
+    "\n",
     "inference_2.finalize()"
    ]
   },
