--- a/final-project/final-notebook.ipynb
+++ b/final-project/final-notebook.ipynb
@@ -1238,9 +1238,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prob_prog_env",
+   "display_name": "Python [conda env:mlprobprog]",
    "language": "python",
-   "name": "prob_prog_env"
+   "name": "conda-env-mlprobprog-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1252,7 +1252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
