[code] improve ptocedure explanation

--- a/notebook-example/GMM_MCMC.ipynb
+++ b/notebook-example/GMM_MCMC.ipynb
@@ -840,7 +840,7 @@
    ],
    "source": [
     "plt.hist(clusters,bins=K)\n",
-    "#plt.savefig('../tmp/img_result/{}/cluster_dist_img={}_K={}_T={}_Time={}.png'.format(current_time,img_no, K, T, current_time))"
+    "plt.savefig('../tmp/img_result/{}/cluster_dist_img={}_K={}_T={}_Time={}.png'.format(current_time,img_no, K, T, current_time))"
    ]
   },
   {
@@ -921,39 +921,17 @@
    "metadata": {},
    "source": [
     "### Posterior Predictive\n",
+    "Using log_sum trick. Reference can be found [here](http://edwardlib.org/tutorials/unsupervised): \n",
     "\n",
-    "1. Sample from posterior q$(\\pi)$ (M = 100 samples). Exponentiate `log_liks` to get $p_k = exp(pi_i)$\n",
-    "2. Calculate mixture likelihood for each sample of pi. $p(x | \\pi_i) = \\sum_{k = 1}^K \\pi_{ik} * p_k$ where k is a class.\n",
-    "3. Average over all $p(x | \\pi_i)$ for i = 1 to M.\n",
-    "4. Take product of all likelihood over $x$ (value too small) OR sum of log likelihood over $x$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 1: \n",
-    " # (100 * K)\n",
-    "#p_k = tf.exp(log_liks) # (N * K)\n",
-    "#weighted_liks = tf.matmul(pi_sample, tf.transpose(p_k))  \n",
-    "#log_expected_liks = tf.log(tf.reduce_mean(weighted_liks, 0))\n",
-    "#total_log_expected_liks = tf.reduce_sum(log_expected_liks, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# modify defintion # wrong\n",
-    "#log_liks_over_all_points = tf.reduce_sum(log_liks, 0)\n",
-    "# no log sum trick\n",
-    "#max_x_i = \n",
-    "#liks_over_all_points = tf.expand_dims(tf.exp(log_liks_over_all_points),0)\n",
-    "#total_log_expected_liks_2 = tf.reduce_mean(tf.log(tf.matmul(liks_over_all_points, tf.transpose(pi_sample))))"
+    "1. Collect $log Normal(x_n|\\mu_k, \\sigma_k)$ = `log_liks`.\n",
+    "2. Sample from posterior q$(\\pi)$ (M samples). Take log to get $log\\pi_ik$\n",
+    "3. Calculate log mixture likelihood for each sample of pi. $x_i = log \\pi_{ik} + log Normal(x_n|\\mu_k, \\sigma_k)$ where k is a class.\n",
+    "4. Calculate $x_{max}$ = argmax x.\n",
+    "5. Calculate the following using RHS of the equation: $log\\sum_i exp(x_i) = x_{max} + log\\sum_i exp(x_i - x_{max})$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -972,22 +950,6 @@
     "averaged_total_log_liks_over_pi_samples_3 = tf.reduce_mean(tf.reduce_sum(edited_log_sum_3, 0), 0)\n",
     "averaged_expected_log_liks_over_pi_samples_3 = tf.reduce_mean(tf.reduce_mean(edited_log_sum_3, 0), 0)\n",
     "averaged_log_liks_pointwise = tf.reduce_mean(edited_log_sum_3, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# using log sum trick\n",
-    "#log_pi_sample = tf.log(pi_sample)    #错误: 在上一步时log_liks 不应该合并先100个(mu, sigma)sample. 而是应该把pi 与这些(mu,sigma)并列。\n",
-    "\n",
-    "#pi_sample_expand = tf.expand_dims(tf.log(pi_sample), 1) #[100, 1, 7]\n",
-    "#sum_log_pi_normal = tf.add(pi_sample_expand,log_liks) # [100, N, 7]\n",
-    "#x_max = tf.reduce_max(sum_log_pi_normal, axis=2) #[100, N]\n",
-    "#edited_log_sum = tf.add(x_max, tf.log(tf.reduce_sum(tf.exp(sum_log_pi_normal - tf.expand_dims(x_max, 2)), axis=2))) # [100, N]  # log (sum_i(exp(x_i-x_max)))\n",
-    "#averaged_total_log_liks_over_pi_samples = tf.reduce_mean(tf.reduce_sum(edited_log_sum, 1), 0)"
    ]
   },
   {
@@ -1067,8 +1029,7 @@
     "\n",
     "Steps:\n",
     "1. We look at a single data point $x_n$ first.\n",
-    "2. Compute the posterior distribution $p(\\theta | x)$\n",
-    "3. Sample ${\\theta_1, ..., \\theta_m}$ where $\\theta_i \\sim p(\\theta|x)$  (In this problem, we need to sample $\\pi$)\n",
+    "2. Sample ${\\theta_1, ..., \\theta_m}$ where $\\theta_i \\sim p(\\theta|x)$  (In this problem, we need to sample $\\pi, \\mu, \\sigma$)\n",
     "4. For each $\\theta_i$, calculate the likelihood $lik_{ni} = p(x_n | \\theta_i)$. Collect $Lik_n = \\{lik_{n1}, ..., lik_{nm}\\}$\n",
     "5. Calculate $Var(Lik_n)$ and $Exp(Lik_n)$\n",
     "6. Repeat the computation for all data points.\n",
@@ -1289,70 +1250,6 @@
     "plt.imshow(reshaped_log_likelihood_values)\n",
     "plt.savefig('../tmp/img_result/{}/logliks_img={}_K={}_T={}_Time={}.png'.format(current_time,img_no, K, T, current_time))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#class TheEncoder(json.JSONEncoder):\n",
-    "#    def default(self, obj):\n",
-    "#        if isinstance(obj, np.integer):\n",
-    "#            return int(obj)\n",
-    "#        elif isinstance(obj, np.floating):\n",
-    "#            return float(obj)\n",
-    "#        elif isinstance(obj, np.ndarray):\n",
-    "#            return obj.tolist()\n",
-    "#        else:\n",
-    "#            return super(MyEncoder, self).default(obj)\n",
-    "#metrics_store_dict = {}\n",
-    "#metrics_store_dict['img'] = img_no\n",
-    "#metrics_store_dict['K'] = K\n",
-    "#metrics_store_dict['T'] = T\n",
-    "#metrics_store_dict['time'] = current_time\n",
-    "#metrics_store_dict['pdi'] = pdi_values\n",
-    "#metrics_store_dict['wapdi'] = wapdi_values\n",
-    "#metrics_store_dict['ptws_log_liks'] = pointwise_log_liks_value\n",
-    "#with open('../tmp/log/criticism_matrics.txt', 'a') as fp:\n",
-    "#      json.dump(metrics_store_dict, fp, ensure_ascii=False, cls=TheEncoder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2018-11-23 16:22:42\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(current_time)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Next Step\n",
-    "1. Set N_iter = 100, 200, 300, 400, 500\n",
-    "2. Record the log_likelihood across all N_iter\n",
-    "3. Implement PDI and WAPDI\n",
-    "4. Logging these result [important]\n",
-    "3. Change initialization method. See if that would affect result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
