--- a/final-project/final-notebook.ipynb
+++ b/final-project/final-notebook.ipynb
@@ -1068,7 +1068,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. PDI and WAPDI\n",
+    "### 4. PDI\n",
     "\n",
     "$$\\text{PDI}(n) = \\frac{\\sigma^2 (n)}{\\mu (n)}  \\qquad \\text{PDI-log}(n) = \\frac{\\sigma^2_{\\log} (n)}{\\mu_{\\log} (n)} \\qquad \n",
     "\\text{WAPDI}(n) = \\frac{\\sigma^2_{\\log}(n)}{\\log \\mu (n)}$$\n",
@@ -1211,7 +1211,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. Heatmap"
+    "#### 2. Heatmap\n",
+    "\n",
+    "In this part, we plot a heatmap to visualize the index values, where the \"heat value\" of each pixel is set to its index value. In the 2-D case, we find that low index values indicate outliers. Hence, in the segmentation task, we expect low \"heat\" (darker color) appears in the margin between different segments."
    ]
   },
   {
@@ -1262,14 +1264,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Intrepreting PDI and WAPDI\n",
+    "Observations:\n",
     "\n",
-    "We need to run experiments on more image to get the intuition of what PDI and WAPDI suggest.\n",
+    "- In both the MCMC and ADVI inferred results, the heatmaps \"reveals\" the segmented result. That is, pixels belong to the same segment have index values in the same level.\n",
+    "- We"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Intrepreting PDI\n",
+    "\n",
+    "We need to run experiments on more image to validate our intuitions of what PDI and WAPDI suggest.\n",
     "\n",
     "Setting: for computation consideration, we use ADVI as inference method. For all experiments on different images, we the same prior setting as in the reset model, and set $K=20$. So the model is not fine-tuned according to the specific image. All the output images could be found in \"../out\" folder.\n",
     "\n",
     "### 1. Density distribution\n",
-    "- For the index that are negative-valued (log-PDI, PDI-log and WAPDI), the density distribution are all left-skewed.\n",
+    "- PDI density distribution is very spiky, hence we turn to log-PDI (note that the log transformation is monotone). \n",
+    "- For the index that are negative-valued (log-PDI, PDI-log and WAPDI), the density distributions are all left-skewed.\n",
     "- If we believe that most of datapoints are matched well, with a few outliers, then a left-skewed distribution reveals that datapoints with index value close to 0, match the model well.\n",
     "\n",
     "### 2. Heatmap"
@@ -1351,8 +1364,15 @@
     "\n",
     "[[PDI2016](https://arxiv.org/pdf/1605.07604.pdf)] Alp Kucukelbir, David M. Blei, arXiv:1605.07604 [stat.ML]\n",
     "\n",
-    "[[PSIS2018](https://arxiv.org/pdf/1802.02538.pdf)] Yuling Yao, Aki Vehtari, Daniel Simpson, Andrew Gelman,  \tarXiv:1802.02538 [stat.ML]\n"
+    "[[PSIS2018](https://arxiv.org/pdf/1802.02538.pdf)] Yuling Yao, Aki Vehtari, Daniel Simpson, Andrew Gelman,  \tarXiv:1802.02538 [stat.ML]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
